# embedding-selector

./: .env.example  .gitignore  OpenAI模型测试结果.md  README.md  close-embeddings-test.json  pyproject.toml  requirements.txt  result.md  results.json  run_test.py  shell.nix  国内闭源模型测试结果.md  开源模型测试结果.md
scripts/: run_test.py
src/: __init__.py  embedding_selector.py  example.py  test.py
src/core/: embedding_selector.py
src/embedding_selector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/models/: model_configs.py
src/tests/: test.py  test_data.py
src/utils/: api_utils.py
